# oakglobal_erp_custom

./: .gitignore  README.md  pyproject.toml
docs/hrms/: current-state-audit.md  hrms_talenta_benchmark.md  sprint-10-analytics-integration-foundation.md  sprint-11-ess-mss-foundation.md  sprint-12-indonesia-payroll-foundation.md  sprint-13-payroll-controls-reports.md  sprint-14-payroll-preflight-engine.md  sprint-15-payroll-disbursement-foundation.md  sprint-16-reimbursement-foundation.md  sprint-17-reimbursement-preflight-engine.md  sprint-18-benefits-foundation.md  sprint-19-talent-development-foundation.md  sprint-2-hrms-foundation-plan.md  sprint-3-attendance-geofence-plan.md  sprint-4-attendance-validation-automation.md  sprint-5-attendance-approval-audit.md  sprint-6-payroll-source-traceability.md  sprint-7-leave-shift-overtime-foundation.md  sprint-8-hr-admin-foundation.md  sprint-9-recruitment-foundation.md  talenta-core-implementation-plan.md  talenta-feature-gap-map.md
oakglobal_erp_custom/: hooks.py  modules.txt
oakglobal_erp_custom/config/: desktop.py
oakglobal_erp_custom/fixtures/: client_script.json  custom_field.json  doctype.json  job_service_type.json  print_format.json  report.json  role.json  terms_and_conditions.json  workflow.json  workflow_action_master.json  workflow_state.json  workspace.json
oakglobal_erp_custom/hrms_ext/: attendance_geofence.py  employee_data_change.py  payroll_preflight.py  payroll_traceability.py  reimbursement_preflight.py  setup_analytics_integration.py  setup_attendance_approval.py  setup_attendance_geofence.py  (+12 more)
(+17 files in other folders)
