[project]
name = "oakglobal_erp_custom"
authors = [
    { name = "Oakglobal Maritim", email = "admin@oakglobalmaritim.com"}
]
description = "Custom ERPNext app for Oakglobal Maritim"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = []

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.frappe-dependencies]
frappe = ">=16.0.0"
erpnext = ">=16.0.0"
